fix(user, event): restful endpoints
