# api/router/router.go
@@ -18,10 +18,10 @@ func New(db *sqlx.DB, v *validator.Validate) http.Handler {
 	mux.HandleFunc("GET /health", health.Health)
 
 	userAPI := user.New(db, v)
-	mux.HandleFunc("GET /user", userAPI.Get)
-	mux.HandleFunc("POST /user", userAPI.Post)
-	mux.HandleFunc("PUT /user", userAPI.Put)
-	mux.HandleFunc("DELETE /user", userAPI.Delete)
+	mux.HandleFunc("GET /users/{user_id}", userAPI.Get)
+	mux.HandleFunc("POST /users", userAPI.Post)
+	mux.HandleFunc("PUT /users/{user_id}", userAPI.Put)
+	mux.HandleFunc("DELETE /users/{user_id}", userAPI.Delete)
 
 	authAPI := auth.New(db, v)
 	mux.HandleFunc("POST /auth/login", authAPI.Authenticate)
@@ -29,11 +29,11 @@ func New(db *sqlx.DB, v *validator.Validate) http.Handler {
 	mux.HandleFunc("PUT /auth/reset-password", authAPI.PutPassword)
 
 	eventAPI := event.New(db, v)
-	mux.HandleFunc("GET /event/{event_id}", eventAPI.Get)
-	mux.HandleFunc("POST /event", eventAPI.Post)
-	mux.HandleFunc("PUT /event/{event_id}", eventAPI.Put)
-	mux.HandleFunc("DELETE /event/{event_id}", eventAPI.Delete)
-	mux.HandleFunc("GET /event/user", eventAPI.GetUserEvents)
+	mux.HandleFunc("GET /events/{event_id}", eventAPI.Get)
+	mux.HandleFunc("POST /events", eventAPI.Post)
+	mux.HandleFunc("PUT /events/{event_id}", eventAPI.Put)
+	mux.HandleFunc("DELETE /events/{event_id}", eventAPI.Delete)
+	mux.HandleFunc("GET /users/{user_id}/events", eventAPI.GetUserEvents)
 
 	mux.HandleFunc("GET /swagger/", httpSwagger.Handler(
 		httpSwagger.URL("/swagger/doc.json"),
